parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16
Rule 2     programaB -> dec_vars
Rule 3     programaB -> empty
Rule 4     programaC -> dec_func programaCC
Rule 5     programaCC -> programaC
Rule 6     programaCC -> empty
Rule 7     dec_vars -> VAR punto_semantico_3 dec_varsI COLON tipo punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB
Rule 8     dec_varsI -> ID punto_semantico_4 dec_varsII
Rule 9     dec_varsII -> COMMA ID punto_semantico_4 dec_varsII
Rule 10    dec_varsII -> empty
Rule 11    dec_varsB -> LBRACE CTEENT punto_semantico_6 RBRACE dec_varsB2
Rule 12    dec_varsB -> empty
Rule 13    dec_varsB2 -> LBRACE CTEENT punto_semantico_7 RBRACE
Rule 14    dec_varsB2 -> empty
Rule 15    dec_varsBB -> dec_vars
Rule 16    dec_varsBB -> empty
Rule 17    tipo -> TIPOENT
Rule 18    tipo -> TIPODEC
Rule 19    tipo -> TIPOLETRA
Rule 20    tipo -> TIPOLOGI
Rule 21    dec_func -> FUNCION punto_semantico_9 ID punto_semantico_10 LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12
Rule 22    dec_funcB -> dec_params
Rule 23    dec_funcB -> empty
Rule 24    dec_params -> ID punto_semantico_11 COLON tipo punto_semantico_5 punto_semantico_12 dec_paramsB
Rule 25    dec_paramsB -> COMMA dec_params
Rule 26    dec_paramsB -> empty
Rule 27    tipo_func -> tipo
Rule 28    tipo_func -> VOID
Rule 29    bloque -> bloqueB bloqueBB
Rule 30    bloqueB -> asignacion
Rule 31    bloqueB -> ciclo_para_cada
Rule 32    bloqueB -> ciclo_mientras
Rule 33    bloqueB -> condicion
Rule 34    bloqueB -> escribir
Rule 35    bloqueB -> leer
Rule 36    bloqueB -> dec_vars
Rule 37    bloqueB -> llam_func punto_modulo_13
Rule 38    bloqueB -> regresar
Rule 39    bloqueBB -> bloqueB bloqueBB
Rule 40    bloqueBB -> empty
Rule 41    asignacion -> llam_vars ASSIGN expresion punto_codigoI_12
Rule 42    llam_vars -> ID punto_codigoI_1 llam_varsB punto_arreglos_6
Rule 43    llam_varsB -> LBRACE punto_arreglos_1 punto_codigoI_8 expresion punto_arreglos_2 punto_arreglos_4 RBRACE punto_codigoI_9 llam_varsB2
Rule 44    llam_varsB -> empty
Rule 45    llam_varsB2 -> LBRACE punto_codigoI_8 expresion punto_arreglos_3 punto_arreglos_5 RBRACE punto_codigoI_9
Rule 46    llam_varsB2 -> empty
Rule 47    expresion -> peta_exp
Rule 48    peta_exp -> tera_exp punto_codigoI_4 peta_expB
Rule 49    peta_expB -> AND punto_codigoI_3 peta_exp
Rule 50    peta_expB -> OR punto_codigoI_3 peta_exp
Rule 51    peta_expB -> empty
Rule 52    tera_exp -> mega_exp punto_codigoI_5 tera_expB
Rule 53    tera_expB -> LT punto_codigoI_3 tera_exp
Rule 54    tera_expB -> GT punto_codigoI_3 tera_exp
Rule 55    tera_expB -> LTE punto_codigoI_3 tera_exp
Rule 56    tera_expB -> GTE punto_codigoI_3 tera_exp
Rule 57    tera_expB -> EQUAL punto_codigoI_3 tera_exp
Rule 58    tera_expB -> NEQUAL punto_codigoI_3 tera_exp
Rule 59    tera_expB -> empty
Rule 60    mega_exp -> kilo_exp punto_codigoI_6 mega_expB
Rule 61    mega_expB -> PLUS punto_codigoI_3 mega_exp
Rule 62    mega_expB -> MINUS punto_codigoI_3 mega_exp
Rule 63    mega_expB -> empty
Rule 64    kilo_exp -> factor punto_codigoI_7 kilo_expB
Rule 65    kilo_expB -> TIMES punto_codigoI_3 kilo_exp
Rule 66    kilo_expB -> DIVIDE punto_codigoI_3 kilo_exp
Rule 67    kilo_expB -> empty
Rule 68    factor -> LPAREN punto_codigoI_8 expresion RPAREN punto_codigoI_9
Rule 69    factor -> llam_vars
Rule 70    factor -> llam_func
Rule 71    factor -> CTEENT punto_semantico_17 punto_codigoI_2
Rule 72    factor -> CTEDECI punto_semantico_17 punto_codigoI_2
Rule 73    factor -> cte_bool punto_semantico_17 punto_codigoI_2
Rule 74    factor -> CTELETRA punto_semantico_17 punto_codigoI_2
Rule 75    factor -> CTEFRASE punto_semantico_17 punto_codigoI_2
Rule 76    llam_func -> ID punto_modulo_3 LPAREN punto_codigoI_8 punto_modulo_4 llam_params punto_modulo_7 RPAREN punto_codigoI_9 punto_modulo_8 punto_modulo_11
Rule 77    cte_bool -> TRUE
Rule 78    cte_bool -> FALSE
Rule 79    llam_params -> expresion punto_modulo_5 llam_paramsB
Rule 80    llam_params -> empty
Rule 81    llam_paramsB -> COMMA punto_modulo_6 llam_params
Rule 82    llam_paramsB -> empty
Rule 83    ciclo_para_cada -> FOR LPAREN ciclo_para_cadaB TO expresion punto_codigoII_9 RPAREN LCURLY bloque RCURLY punto_codigoII_10
Rule 84    ciclo_para_cadaB -> VAR punto_semantico_3 ID punto_semantico_4 COLON tipo punto_semantico_5 punto_semantico_8 punto_codigoII_7 ASSIGN expresion punto_codigoII_8
Rule 85    ciclo_mientras -> WHILE punto_codigoII_4 LPAREN expresion punto_codigoII_5 RPAREN LCURLY bloque RCURLY punto_codigoII_6
Rule 86    condicion -> IF LPAREN expresion punto_codigoII_1 RPAREN LCURLY bloque RCURLY condicionB punto_codigoII_3
Rule 87    condicionB -> ELSE punto_codigoII_2 LCURLY bloque RCURLY
Rule 88    condicionB -> empty
Rule 89    escribir -> ESCRITURA LPAREN escribirB RPAREN
Rule 90    escribirB -> expresion punto_codigoI_10 escribirBB
Rule 91    escribirB -> CTEFRASE punto_semantico_17 punto_codigoI_2 punto_codigoI_10 escribirBB
Rule 92    escribirB -> CTELETRA punto_semantico_17 punto_codigoI_2 punto_codigoI_10 escribirBB
Rule 93    escribirBB -> COMMA escribirB
Rule 94    escribirBB -> empty
Rule 95    leer -> LECTURA LPAREN leerB RPAREN
Rule 96    leerB -> ID punto_codigoI_1 punto_codigoI_11 leerBB
Rule 97    leerBB -> COMMA leerB
Rule 98    leerBB -> empty
Rule 99    regresar -> punto_modulo_9 RETURN LPAREN expresion punto_modulo_10 RPAREN
Rule 100   inicio -> MAIN punto_semantico_15 LPAREN RPAREN LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14
Rule 101   empty -> <empty>
Rule 102   puntos_semantica_1 -> <empty>
Rule 103   puntos_semantica_2 -> <empty>
Rule 104   punto_semantico_3 -> <empty>
Rule 105   punto_semantico_4 -> <empty>
Rule 106   punto_semantico_5 -> <empty>
Rule 107   punto_semantico_6 -> <empty>
Rule 108   punto_semantico_7 -> <empty>
Rule 109   punto_semantico_8 -> <empty>
Rule 110   punto_semantico_9 -> <empty>
Rule 111   punto_semantico_10 -> <empty>
Rule 112   punto_semantico_11 -> <empty>
Rule 113   punto_semantico_12 -> <empty>
Rule 114   punto_semantico_13 -> <empty>
Rule 115   punto_semantico_14 -> <empty>
Rule 116   punto_semantico_15 -> <empty>
Rule 117   punto_semantico_16 -> <empty>
Rule 118   punto_semantico_17 -> <empty>
Rule 119   punto_codigoI_0 -> <empty>
Rule 120   punto_codigoI_1 -> <empty>
Rule 121   punto_codigoI_2 -> <empty>
Rule 122   punto_codigoI_3 -> <empty>
Rule 123   punto_codigoI_4 -> <empty>
Rule 124   punto_codigoI_5 -> <empty>
Rule 125   punto_codigoI_6 -> <empty>
Rule 126   punto_codigoI_7 -> <empty>
Rule 127   punto_codigoI_8 -> <empty>
Rule 128   punto_codigoI_9 -> <empty>
Rule 129   punto_codigoI_10 -> <empty>
Rule 130   punto_codigoI_11 -> <empty>
Rule 131   punto_codigoI_12 -> <empty>
Rule 132   punto_codigoII_1 -> <empty>
Rule 133   punto_codigoII_2 -> <empty>
Rule 134   punto_codigoII_3 -> <empty>
Rule 135   punto_codigoII_4 -> <empty>
Rule 136   punto_codigoII_5 -> <empty>
Rule 137   punto_codigoII_6 -> <empty>
Rule 138   punto_codigoII_7 -> <empty>
Rule 139   punto_codigoII_8 -> <empty>
Rule 140   punto_codigoII_9 -> <empty>
Rule 141   punto_codigoII_10 -> <empty>
Rule 142   punto_arreglos_1 -> <empty>
Rule 143   punto_arreglos_2 -> <empty>
Rule 144   punto_arreglos_3 -> <empty>
Rule 145   punto_arreglos_4 -> <empty>
Rule 146   punto_arreglos_5 -> <empty>
Rule 147   punto_arreglos_6 -> <empty>
Rule 148   punto_modulo_1 -> <empty>
Rule 149   punto_modulo_2 -> <empty>
Rule 150   punto_modulo_3 -> <empty>
Rule 151   punto_modulo_4 -> <empty>
Rule 152   punto_modulo_5 -> <empty>
Rule 153   punto_modulo_6 -> <empty>
Rule 154   punto_modulo_7 -> <empty>
Rule 155   punto_modulo_8 -> <empty>
Rule 156   punto_modulo_9 -> <empty>
Rule 157   punto_modulo_10 -> <empty>
Rule 158   punto_modulo_11 -> <empty>
Rule 159   punto_modulo_12 -> <empty>
Rule 160   punto_modulo_13 -> <empty>

Terminals, with rules where they appear

AND                  : 49
ASSIGN               : 41 84
COLON                : 7 21 24 84
COMMA                : 9 25 81 93 97
CTEDECI              : 72
CTEENT               : 11 13 71
CTEFRASE             : 75 91
CTELETRA             : 74 92
DIVIDE               : 66
ELSE                 : 87
EQUAL                : 57
ESCRITURA            : 89
FALSE                : 78
FOR                  : 83
FUNCION              : 21
GT                   : 54
GTE                  : 56
ID                   : 1 8 9 21 24 42 76 84 96
IF                   : 86
LBRACE               : 11 13 43 45
LCURLY               : 21 83 85 86 87 100
LECTURA              : 95
LPAREN               : 21 68 76 83 85 86 89 95 99 100
LT                   : 53
LTE                  : 55
MAIN                 : 100
MINUS                : 62
NEQUAL               : 58
OR                   : 50
PLUS                 : 61
PROGRAMA             : 1
RBRACE               : 11 13 43 45
RCURLY               : 21 83 85 86 87 100
RETURN               : 99
RPAREN               : 21 68 76 83 85 86 89 95 99 100
TIMES                : 65
TIPODEC              : 18
TIPOENT              : 17
TIPOLETRA            : 19
TIPOLOGI             : 20
TO                   : 83
TRUE                 : 77
VAR                  : 7 84
VOID                 : 28
WHILE                : 85
error                : 

Nonterminals, with rules where they appear

asignacion           : 30
bloque               : 21 83 85 86 87 100
bloqueB              : 29 39
bloqueBB             : 29 39
ciclo_mientras       : 32
ciclo_para_cada      : 31
ciclo_para_cadaB     : 83
condicion            : 33
condicionB           : 86
cte_bool             : 73
dec_func             : 4
dec_funcB            : 21
dec_params           : 22 25
dec_paramsB          : 24
dec_vars             : 2 15 36
dec_varsB            : 7
dec_varsB2           : 11
dec_varsBB           : 7
dec_varsI            : 7
dec_varsII           : 8 9
empty                : 3 6 10 12 14 16 23 26 40 44 46 51 59 63 67 80 82 88 94 98
escribir             : 34
escribirB            : 89 93
escribirBB           : 90 91 92
expresion            : 41 43 45 68 79 83 84 85 86 90 99
factor               : 64
inicio               : 1
kilo_exp             : 60 65 66
kilo_expB            : 64
leer                 : 35
leerB                : 95 97
leerBB               : 96
llam_func            : 37 70
llam_params          : 76 81
llam_paramsB         : 79
llam_vars            : 41 69
llam_varsB           : 42
llam_varsB2          : 43
mega_exp             : 52 61 62
mega_expB            : 60
peta_exp             : 47 49 50
peta_expB            : 48
programa             : 0
programaB            : 1
programaC            : 1 5
programaCC           : 4
punto_arreglos_1     : 43
punto_arreglos_2     : 43
punto_arreglos_3     : 45
punto_arreglos_4     : 43
punto_arreglos_5     : 45
punto_arreglos_6     : 42
punto_codigoII_1     : 86
punto_codigoII_10    : 83
punto_codigoII_2     : 87
punto_codigoII_3     : 86
punto_codigoII_4     : 85
punto_codigoII_5     : 85
punto_codigoII_6     : 85
punto_codigoII_7     : 84
punto_codigoII_8     : 84
punto_codigoII_9     : 83
punto_codigoI_0      : 1
punto_codigoI_1      : 42 96
punto_codigoI_10     : 90 91 92
punto_codigoI_11     : 96
punto_codigoI_12     : 41
punto_codigoI_2      : 71 72 73 74 75 91 92
punto_codigoI_3      : 49 50 53 54 55 56 57 58 61 62 65 66
punto_codigoI_4      : 48
punto_codigoI_5      : 52
punto_codigoI_6      : 60
punto_codigoI_7      : 64
punto_codigoI_8      : 43 45 68 76
punto_codigoI_9      : 43 45 68 76
punto_modulo_1       : 1
punto_modulo_10      : 99
punto_modulo_11      : 76
punto_modulo_12      : 21
punto_modulo_13      : 37
punto_modulo_2       : 21 100
punto_modulo_3       : 76
punto_modulo_4       : 76
punto_modulo_5       : 79
punto_modulo_6       : 81
punto_modulo_7       : 76
punto_modulo_8       : 76
punto_modulo_9       : 99
punto_semantico_10   : 21
punto_semantico_11   : 24
punto_semantico_12   : 24
punto_semantico_13   : 21
punto_semantico_14   : 21 100
punto_semantico_15   : 100
punto_semantico_16   : 1
punto_semantico_17   : 71 72 73 74 75 91 92
punto_semantico_3    : 7 21 84
punto_semantico_4    : 8 9 84
punto_semantico_5    : 7 24 84
punto_semantico_6    : 11
punto_semantico_7    : 13
punto_semantico_8    : 7 84
punto_semantico_9    : 21
puntos_semantica_1   : 1
puntos_semantica_2   : 1
regresar             : 38
tera_exp             : 48 53 54 55 56 57 58
tera_expB            : 52
tipo                 : 7 24 27 84
tipo_func            : 21

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16
    (102) puntos_semantica_1 -> .

    ID              reduce using rule 102 (puntos_semantica_1 -> .)

    puntos_semantica_1             shift and go to state 3

state 3

    (1) programa -> PROGRAMA puntos_semantica_1 . punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16
    (119) punto_codigoI_0 -> .

    ID              reduce using rule 119 (punto_codigoI_0 -> .)

    punto_codigoI_0                shift and go to state 4

state 4

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 . punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16
    (148) punto_modulo_1 -> .

    ID              reduce using rule 148 (punto_modulo_1 -> .)

    punto_modulo_1                 shift and go to state 5

state 5

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 . ID puntos_semantica_2 programaB programaC inicio punto_semantico_16

    ID              shift and go to state 6


state 6

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID . puntos_semantica_2 programaB programaC inicio punto_semantico_16
    (103) puntos_semantica_2 -> .

    VAR             reduce using rule 103 (puntos_semantica_2 -> .)
    FUNCION         reduce using rule 103 (puntos_semantica_2 -> .)

    puntos_semantica_2             shift and go to state 7

state 7

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 . programaB programaC inicio punto_semantico_16
    (2) programaB -> . dec_vars
    (3) programaB -> . empty
    (7) dec_vars -> . VAR punto_semantico_3 dec_varsI COLON tipo punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB
    (101) empty -> .

    VAR             shift and go to state 11
    FUNCION         reduce using rule 101 (empty -> .)

    programaB                      shift and go to state 8
    dec_vars                       shift and go to state 9
    empty                          shift and go to state 10

state 8

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB . programaC inicio punto_semantico_16
    (4) programaC -> . dec_func programaCC
    (21) dec_func -> . FUNCION punto_semantico_9 ID punto_semantico_10 LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12

    FUNCION         shift and go to state 14

    programaC                      shift and go to state 12
    dec_func                       shift and go to state 13

state 9

    (2) programaB -> dec_vars .

    FUNCION         reduce using rule 2 (programaB -> dec_vars .)


state 10

    (3) programaB -> empty .

    FUNCION         reduce using rule 3 (programaB -> empty .)


state 11

    (7) dec_vars -> VAR . punto_semantico_3 dec_varsI COLON tipo punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB
    (104) punto_semantico_3 -> .

    ID              reduce using rule 104 (punto_semantico_3 -> .)

    punto_semantico_3              shift and go to state 15

state 12

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC . inicio punto_semantico_16
    (100) inicio -> . MAIN punto_semantico_15 LPAREN RPAREN LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14

    MAIN            shift and go to state 17

    inicio                         shift and go to state 16

state 13

    (4) programaC -> dec_func . programaCC
    (5) programaCC -> . programaC
    (6) programaCC -> . empty
    (4) programaC -> . dec_func programaCC
    (101) empty -> .
    (21) dec_func -> . FUNCION punto_semantico_9 ID punto_semantico_10 LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12

    MAIN            reduce using rule 101 (empty -> .)
    FUNCION         shift and go to state 14

    dec_func                       shift and go to state 13
    programaCC                     shift and go to state 18
    programaC                      shift and go to state 19
    empty                          shift and go to state 20

state 14

    (21) dec_func -> FUNCION . punto_semantico_9 ID punto_semantico_10 LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12
    (110) punto_semantico_9 -> .

    ID              reduce using rule 110 (punto_semantico_9 -> .)

    punto_semantico_9              shift and go to state 21

state 15

    (7) dec_vars -> VAR punto_semantico_3 . dec_varsI COLON tipo punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB
    (8) dec_varsI -> . ID punto_semantico_4 dec_varsII

    ID              shift and go to state 23

    dec_varsI                      shift and go to state 22

state 16

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio . punto_semantico_16
    (117) punto_semantico_16 -> .

    $end            reduce using rule 117 (punto_semantico_16 -> .)

    punto_semantico_16             shift and go to state 24

state 17

    (100) inicio -> MAIN . punto_semantico_15 LPAREN RPAREN LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14
    (116) punto_semantico_15 -> .

    LPAREN          reduce using rule 116 (punto_semantico_15 -> .)

    punto_semantico_15             shift and go to state 25

state 18

    (4) programaC -> dec_func programaCC .

    MAIN            reduce using rule 4 (programaC -> dec_func programaCC .)


state 19

    (5) programaCC -> programaC .

    MAIN            reduce using rule 5 (programaCC -> programaC .)


state 20

    (6) programaCC -> empty .

    MAIN            reduce using rule 6 (programaCC -> empty .)


state 21

    (21) dec_func -> FUNCION punto_semantico_9 . ID punto_semantico_10 LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12

    ID              shift and go to state 26


state 22

    (7) dec_vars -> VAR punto_semantico_3 dec_varsI . COLON tipo punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB

    COLON           shift and go to state 27


state 23

    (8) dec_varsI -> ID . punto_semantico_4 dec_varsII
    (105) punto_semantico_4 -> .

    COMMA           reduce using rule 105 (punto_semantico_4 -> .)
    COLON           reduce using rule 105 (punto_semantico_4 -> .)

    punto_semantico_4              shift and go to state 28

state 24

    (1) programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16 .

    $end            reduce using rule 1 (programa -> PROGRAMA puntos_semantica_1 punto_codigoI_0 punto_modulo_1 ID puntos_semantica_2 programaB programaC inicio punto_semantico_16 .)


state 25

    (100) inicio -> MAIN punto_semantico_15 . LPAREN RPAREN LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14

    LPAREN          shift and go to state 29


state 26

    (21) dec_func -> FUNCION punto_semantico_9 ID . punto_semantico_10 LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12
    (111) punto_semantico_10 -> .

    LPAREN          reduce using rule 111 (punto_semantico_10 -> .)

    punto_semantico_10             shift and go to state 30

state 27

    (7) dec_vars -> VAR punto_semantico_3 dec_varsI COLON . tipo punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB
    (17) tipo -> . TIPOENT
    (18) tipo -> . TIPODEC
    (19) tipo -> . TIPOLETRA
    (20) tipo -> . TIPOLOGI

    TIPOENT         shift and go to state 32
    TIPODEC         shift and go to state 33
    TIPOLETRA       shift and go to state 34
    TIPOLOGI        shift and go to state 35

    tipo                           shift and go to state 31

state 28

    (8) dec_varsI -> ID punto_semantico_4 . dec_varsII
    (9) dec_varsII -> . COMMA ID punto_semantico_4 dec_varsII
    (10) dec_varsII -> . empty
    (101) empty -> .

    COMMA           shift and go to state 37
    COLON           reduce using rule 101 (empty -> .)

    dec_varsII                     shift and go to state 36
    empty                          shift and go to state 38

state 29

    (100) inicio -> MAIN punto_semantico_15 LPAREN . RPAREN LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14

    RPAREN          shift and go to state 39


state 30

    (21) dec_func -> FUNCION punto_semantico_9 ID punto_semantico_10 . LPAREN punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12

    LPAREN          shift and go to state 40


state 31

    (7) dec_vars -> VAR punto_semantico_3 dec_varsI COLON tipo . punto_semantico_5 dec_varsB punto_semantico_8 dec_varsBB
    (106) punto_semantico_5 -> .

    LBRACE          reduce using rule 106 (punto_semantico_5 -> .)
    VAR             reduce using rule 106 (punto_semantico_5 -> .)
    FUNCION         reduce using rule 106 (punto_semantico_5 -> .)
    FOR             reduce using rule 106 (punto_semantico_5 -> .)
    WHILE           reduce using rule 106 (punto_semantico_5 -> .)
    IF              reduce using rule 106 (punto_semantico_5 -> .)
    ESCRITURA       reduce using rule 106 (punto_semantico_5 -> .)
    LECTURA         reduce using rule 106 (punto_semantico_5 -> .)
    ID              reduce using rule 106 (punto_semantico_5 -> .)
    RETURN          reduce using rule 106 (punto_semantico_5 -> .)
    RCURLY          reduce using rule 106 (punto_semantico_5 -> .)

    punto_semantico_5              shift and go to state 41

state 32

    (17) tipo -> TIPOENT .

    LBRACE          reduce using rule 17 (tipo -> TIPOENT .)
    VAR             reduce using rule 17 (tipo -> TIPOENT .)
    FUNCION         reduce using rule 17 (tipo -> TIPOENT .)
    FOR             reduce using rule 17 (tipo -> TIPOENT .)
    WHILE           reduce using rule 17 (tipo -> TIPOENT .)
    IF              reduce using rule 17 (tipo -> TIPOENT .)
    ESCRITURA       reduce using rule 17 (tipo -> TIPOENT .)
    LECTURA         reduce using rule 17 (tipo -> TIPOENT .)
    ID              reduce using rule 17 (tipo -> TIPOENT .)
    RETURN          reduce using rule 17 (tipo -> TIPOENT .)
    RCURLY          reduce using rule 17 (tipo -> TIPOENT .)
    COMMA           reduce using rule 17 (tipo -> TIPOENT .)
    RPAREN          reduce using rule 17 (tipo -> TIPOENT .)
    LCURLY          reduce using rule 17 (tipo -> TIPOENT .)
    ASSIGN          reduce using rule 17 (tipo -> TIPOENT .)


state 33

    (18) tipo -> TIPODEC .

    LBRACE          reduce using rule 18 (tipo -> TIPODEC .)
    VAR             reduce using rule 18 (tipo -> TIPODEC .)
    FUNCION         reduce using rule 18 (tipo -> TIPODEC .)
    FOR             reduce using rule 18 (tipo -> TIPODEC .)
    WHILE           reduce using rule 18 (tipo -> TIPODEC .)
    IF              reduce using rule 18 (tipo -> TIPODEC .)
    ESCRITURA       reduce using rule 18 (tipo -> TIPODEC .)
    LECTURA         reduce using rule 18 (tipo -> TIPODEC .)
    ID              reduce using rule 18 (tipo -> TIPODEC .)
    RETURN          reduce using rule 18 (tipo -> TIPODEC .)
    RCURLY          reduce using rule 18 (tipo -> TIPODEC .)
    COMMA           reduce using rule 18 (tipo -> TIPODEC .)
    RPAREN          reduce using rule 18 (tipo -> TIPODEC .)
    LCURLY          reduce using rule 18 (tipo -> TIPODEC .)
    ASSIGN          reduce using rule 18 (tipo -> TIPODEC .)


state 34

    (19) tipo -> TIPOLETRA .

    LBRACE          reduce using rule 19 (tipo -> TIPOLETRA .)
    VAR             reduce using rule 19 (tipo -> TIPOLETRA .)
    FUNCION         reduce using rule 19 (tipo -> TIPOLETRA .)
    FOR             reduce using rule 19 (tipo -> TIPOLETRA .)
    WHILE           reduce using rule 19 (tipo -> TIPOLETRA .)
    IF              reduce using rule 19 (tipo -> TIPOLETRA .)
    ESCRITURA       reduce using rule 19 (tipo -> TIPOLETRA .)
    LECTURA         reduce using rule 19 (tipo -> TIPOLETRA .)
    ID              reduce using rule 19 (tipo -> TIPOLETRA .)
    RETURN          reduce using rule 19 (tipo -> TIPOLETRA .)
    RCURLY          reduce using rule 19 (tipo -> TIPOLETRA .)
    COMMA           reduce using rule 19 (tipo -> TIPOLETRA .)
    RPAREN          reduce using rule 19 (tipo -> TIPOLETRA .)
    LCURLY          reduce using rule 19 (tipo -> TIPOLETRA .)
    ASSIGN          reduce using rule 19 (tipo -> TIPOLETRA .)


state 35

    (20) tipo -> TIPOLOGI .

    LBRACE          reduce using rule 20 (tipo -> TIPOLOGI .)
    VAR             reduce using rule 20 (tipo -> TIPOLOGI .)
    FUNCION         reduce using rule 20 (tipo -> TIPOLOGI .)
    FOR             reduce using rule 20 (tipo -> TIPOLOGI .)
    WHILE           reduce using rule 20 (tipo -> TIPOLOGI .)
    IF              reduce using rule 20 (tipo -> TIPOLOGI .)
    ESCRITURA       reduce using rule 20 (tipo -> TIPOLOGI .)
    LECTURA         reduce using rule 20 (tipo -> TIPOLOGI .)
    ID              reduce using rule 20 (tipo -> TIPOLOGI .)
    RETURN          reduce using rule 20 (tipo -> TIPOLOGI .)
    RCURLY          reduce using rule 20 (tipo -> TIPOLOGI .)
    COMMA           reduce using rule 20 (tipo -> TIPOLOGI .)
    RPAREN          reduce using rule 20 (tipo -> TIPOLOGI .)
    LCURLY          reduce using rule 20 (tipo -> TIPOLOGI .)
    ASSIGN          reduce using rule 20 (tipo -> TIPOLOGI .)


state 36

    (8) dec_varsI -> ID punto_semantico_4 dec_varsII .

    COLON           reduce using rule 8 (dec_varsI -> ID punto_semantico_4 dec_varsII .)


state 37

    (9) dec_varsII -> COMMA . ID punto_semantico_4 dec_varsII

    ID              shift and go to state 42


state 38

    (10) dec_varsII -> empty .

    COLON           reduce using rule 10 (dec_varsII -> empty .)


state 39

    (100) inicio -> MAIN punto_semantico_15 LPAREN RPAREN . LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14

    LCURLY          shift and go to state 43


state 40

    (21) dec_func -> FUNCION punto_semantico_9 ID punto_semantico_10 LPAREN . punto_semantico_3 dec_funcB RPAREN COLON tipo_func punto_semantico_13 LCURLY punto_modulo_2 bloque RCURLY punto_semantico_14 punto_modulo_12
    (104) punto_semantico_3 -> .

    ID              reduce using rule 104 (punto_semantico_3 -> .)
    RPAREN          reduce using rule 104 (punto_semantico_3 -> .)

    punto_semantico_3              shift and go to state 44

state 41

    (7) dec_vars -> VAR punto_semantico_3 dec_varsI COLON tipo punto_semantico_5 . dec_varsB punto_semantico_8 dec_varsBB
    (11) dec_varsB -> . LBRACE CTEENT punto_semantico_6 RBRACE dec_varsB2
    (12) dec_varsB -> . empty
    (101) empty -> .

    LBRACE          shift and go to state 46
    VAR             reduce using rule 101 (empty -> .)
    FUNCION         reduce using rule 101 (empty -> .)
    FOR             reduce using rule 101 (empty -> .)
    WHILE           reduce using rule 101 (empty -> .)
    IF              reduce using rule 101 (empty -> .)
    ESCRITURA       reduce using rule 101 (empty -> .)
    LECTURA         reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    RETURN          reduce using rule 101 (empty -> .)
    RCURLY          reduce using rule 101 (empty -> .)

    dec_varsB                      shift and go to state 45
    empty                          shift and go to state 47

state 42

    (9) dec_varsII -> COMMA ID . punto_semantico_4 dec_varsII
    (105) punto_semantico_4 -> .

    COMMA           reduce using rule 105 (punto_semantico_4 -> .)
    COLON           reduce using rule 105 (punto_semantico_4 -> .)

    punto_semantico_4              shift and go to state 48

state 43

    (100) inicio -> MAIN punto_semantico_15 LPAREN RPAREN LCURLY . punto_modulo_2 bloque RCURLY punto_semantico_14
    (149) punto_modulo_2 -> .

    FOR             reduce using rule 149 (punto_modulo_2 -> .)
    WHILE           reduce using rule 149 (punto_modulo_2 -> .)
    IF              reduce using rule 149 (punto_modulo_2 -> .)
    ESCRITURA       reduce using rule 149 (punto_modulo_2 -> .)
    LECTURA         reduce using rule 149 (punto_modulo_2 -> .)
    VAR             reduce using rule 149 (punto_modulo_2 -> .)
    ID              reduce using rule 149 (punto_modulo_2 -> .)
    RETURN          reduce using rule 149 (punto_modulo_2 -> .)
